✨ issue-34-sort-builder
Add ability to sort list calls.

Closes #34